tests for white-space, test for visibility in css3, fixing css21 tests

--- a/autotest/testsuite/properties/positive/width/css21/001.css
+++ b/autotest/testsuite/properties/positive/width/css21/001.css
@@ -3,5 +3,4 @@ b { width: 100px }
 c { width: 0% }
 d { width: 10% }
 e { width: auto }
-y { width: initial }
 z { width: inherit }
